third_party/move/move-compiler-v2/tests/lambda/inline-parity/options.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/options.move:22:33
   │
22 │         let x = map_opt::map(t, |e| e + 1);
   │                                 ^^^^^^^^^
